// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebpackNotifierPlugin contentImage ["successful"] {contentImage: "../another-logo.png"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/another-logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin emoji message ["error"] {"emoji":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "❌ Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin emoji message ["successful"] {"emoji":true}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "✅ Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin emoji message ["warning"] {"emoji":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin one compilation ["error"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin one compilation ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin one compilation ["warning"] undefined: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin title ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "build error ❌",
}
`;

exports[`WebpackNotifierPlugin title ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`WebpackNotifierPlugin title ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "build complete ✅",
}
`;

exports[`WebpackNotifierPlugin title ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "build warning ⚠️",
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 1`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 2`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 2`] = `Array []`;

exports[`WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 3`] = `Array []`;

exports[`WebpackNotifierPlugin verbosity level configuration Exclude Warnings ["warning"] {"excludeWarnings":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "excludeWarnings": true,
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "onlyOnError": true,
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "successful" build 1`] = `Array []`;

exports[`WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "warning" build 1`] = `Array []`;

exports[`WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 1`] = `Array []`;

exports[`WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "skipFirstNotification": true,
  "title": undefined,
}
`;
